@@ -424,6 +424,7 @@ All:
 - Added wxVersionInfo and various GetLibraryVersionInfo() functions (troelsk).
 - Added wxNumberFormatter for dealing with thousands separators.
 - Added wxIntegerValidator<> and wxFloatingPointValidator<> validators.
+- Added wxIMAGE_OPTION_GIF_COMMENT to read and write GIF comments (troelsk).
 
 Unix:
 
